@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130304"
-#define public MagickPackageReleaseDate "snapshot-20130304"
+#define public MagickPackageVersionAddendum ".020130309"
+#define public MagickPackageReleaseDate "snapshot-20130309"
