@@ -35,11 +35,11 @@ extern "C" {
 */
 #define MagickPackageName "GraphicsMagick"
 #define MagickCopyright  "Copyright (C) 2002-2013 GraphicsMagick Group.\nAdditional copyrights and licenses apply to this software.\nSee http://www.GraphicsMagick.org/www/Copyright.html for details."
-#define MagickLibVersion  0x131000
+#define MagickLibVersion  0x141100
 #define MagickLibVersionText  "1.4"
-#define MagickLibVersionNumber 13,10,0
-#define MagickChangeDate   "20130304"
-#define MagickReleaseDate  "snapshot-20130304"
+#define MagickLibVersionNumber 14,11,0
+#define MagickChangeDate   "20130309"
+#define MagickReleaseDate  "snapshot-20130309"
 	
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
@@ -54,7 +54,7 @@ extern "C" {
   MagickLibVersionNumber, but these are broken out and simplified so
   that they can be easily used in C pre-processor logic.
 */
-#define MagickLibInterfaceNewest 13
+#define MagickLibInterfaceNewest 14
 #define MagickLibInterfaceOldest 3
 
 #if (QuantumDepth == 8)
