@@ -86,21 +86,21 @@ HG_BRANCH_TAG=default
 #
 # Magick library versioning
 #
-MAGICK_LIBRARY_CURRENT=13
+MAGICK_LIBRARY_CURRENT=14
 
 MAGICK_LIBRARY_REVISION=0
-MAGICK_LIBRARY_AGE=10
+MAGICK_LIBRARY_AGE=11
 
 #
 # Magick++ library versioning
 #
 MAGICK_PLUS_PLUS_LIBRARY_CURRENT=9
-MAGICK_PLUS_PLUS_LIBRARY_REVISION=1
+MAGICK_PLUS_PLUS_LIBRARY_REVISION=2
 MAGICK_PLUS_PLUS_LIBRARY_AGE=6
 
 #
 # Magick Wand library versioning
 #
-MAGICK_WAND_LIBRARY_CURRENT=7
-MAGICK_WAND_LIBRARY_REVISION=1
-MAGICK_WAND_LIBRARY_AGE=5
+MAGICK_WAND_LIBRARY_CURRENT=8
+MAGICK_WAND_LIBRARY_REVISION=0
+MAGICK_WAND_LIBRARY_AGE=6
