@@ -47,7 +47,7 @@
 </colgroup>
 <tbody valign="top">
 <tr><td>Current Release</td>
-<td>1.3.17 (Released October 13, 2012) <a class="reference external" href="http://sourceforge.net/projects/graphicsmagick/files/">download release</a></td>
+<td>1.3.18 (Released March 9, 2013) <a class="reference external" href="http://sourceforge.net/projects/graphicsmagick/files/">download release</a></td>
 </tr>
 <tr><td>Development Snapshots</td>
 <td>(Updated frequently) <a class="reference external" href="ftp://ftp.graphicsmagick.org/pub/GraphicsMagick/snapshots/">download development snapshots</a></td>
